*** When upgrading, don't forget to: "cd bin ; ./checksetup.pl" ***
*** Also, it is _highly_ advisable to backup your data before upgrading ***

Version 1.7.7

* The table of contents links on the view topic page didn't include
  the brmode parameter, so clicking on a filename link reloaded the
  whole topic page, which is inconvenient.  This has been fixed.

Version 1.7.6

* Fixed bug where created topics for deployments which had projects
  disabled were not handled correctly.

* Fixed bug found by Jason Remillard <jremillardshop@yahoo.com> where
  emails were being sent for those lines which already had a comment,
  but $allow_comment_email was false.

Version 1.7.5

* Added in support for parsing VSS diffs, and retrieving file data
  from a VSS repository.  VSS support is not complete yet, as the
  script for generated the diff text has not been submitted yet.

The following changes below were from Aaron Kardell
<akardell@altonaed.com>:

* Modified unidiff parser so that diffs created with
  --show-function-line and --show-c-function can be parsed and
  displayed in the view topic screen.

* Incoporated SubmitCodeReview.pl script, which can be used for
  automating the submission of a code review topic from the command
  line.  It also has support for incremental code reviews.  See the
  script and its help text for more details.

* Added an option to the view topic screen which controls how text is
  wrapped.  This can be useful for reviews with long source code lines.

The following changes below were from Jason Remillard
<jremillardshop@yahoo.com>:

* The topic view page has been modified so that a non-diff topic makes
  better use of screen real-estate.

* Non-diff topic text uploads now include the filename, rather than
  just "unknown".

* Turned off more project-specific display that should be hidden when
  projects are not enabled.

* Delete topic button moved to topic state option on view topic
  screen.
