@@ -7,7 +7,7 @@
 <book>
   <bookinfo>
     <title>The Codestriker Guide</title>
-    <subtitle>Version 1.7.6</subtitle>
+    <subtitle>Version 1.7.7</subtitle>
     <legalnotice>
       <para>Copyright (c) 2001, 2002, 2003</para>
     </legalnotice>
